objects/BasePackageLineConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CC_Product2_Id__c</fullName>
        <label>CC Product2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GU_Product2_Id__c</fullName>
        <label>GU Product2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GU__c</fullName>
        <label>GU</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PS_Product2_Id__c</fullName>
        <label>PS Product2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS__c</fullName>
        <label>PS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PureSuccess__c</fullName>
        <label>PureSuccess</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Base Package Line Configuration</label>
</CustomObject>